@@ -35,7 +35,6 @@ public class AdminScenarioServiceImpl implements AdminScenarioService{
 		Scenario scenario = Scenario.create(request.getPrompt(),
 											request.getScenarioDescription(),
 											request.getCompleteExp(),
-											request.getLevel(),
 											request.getCategory());	
 		
 		scenarioRepository.save(scenario);
@@ -73,7 +72,7 @@ public class AdminScenarioServiceImpl implements AdminScenarioService{
 		
 		List<AdminScenarioListDto.ResponseList> responseList = scenarioList.stream()
 				.map(AdminScenarioListDto.ResponseList::from)
-				.collect(Collectors.toList());
+				.toList();
 		
 		return responseList;
 	}
@@ -88,7 +87,6 @@ public class AdminScenarioServiceImpl implements AdminScenarioService{
 		
 		scenario.update(request.getPrompt(),
 					request.getScenarioDescription(),
-					request.getLevel(),
 					request.getCategory(),
 					request.getCompleteExp());
 	}
